--- a/Sims3ConfigMaker/Sims3ConfigMaker.csproj
+++ b/Sims3ConfigMaker/Sims3ConfigMaker.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,7 +49,7 @@
   <ItemGroup>
     <Compile Include="src\model\GraphicsRules.cs" />
     <Compile Include="src\model\ISims3Options.cs" />
-    <Compile Include="src\model\UI.cs" />
+    <Compile Include="src\model\SystemInfo.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
